# adhook

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md
cmake/: getArch.cmake
examples/: CMakeLists.txt  patch.c
include/: hook.h  patch.h
include/adhook/: hook.h  patch.h
include/adhook/arch/: symsize.h
include/arch/: symsize.h
src/: hook.c  patch.c
src/arch/: jump.h
src/arch/i386/: jump.c  symsize.c
src/arch/x86_64/: jump.c  symsize.c
tests/: CMakeLists.txt  test_hook.cpp  test_symsize.cpp
